AC_PREREQ([2.69])
AC_INIT([libsha],
        [1.0.0],
        [Kyle Isom],
        [libsha], [https://github.com/kisom/libsha])
AM_INIT_AUTOMAKE([1.14 foreign])

AC_CONFIG_SRCDIR([src/sha/sha.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_CONFIG_MACRO_DIR([m4])

AC_CHECK_HEADERS
AC_CANONICAL_HOST

LT_INIT
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_CC_C_O

AC_OUTPUT

